css/styles.css
@font-face {
    font-family: "my-font-h1";
    src:
        local("HelveticaNeue-Bold"), local("Helvetica Neue Bold"),
        url(fonts\HelveticaNeue-Bold.otf) format("opentype");
    font-weight: bold;
}

@font-face {
    font-family: "my-font-h2-h3";
    src:
        local("HelveticaNeue-Medium"), local("Helvetica Neue Medium"),
        url(fonts\HelveticaNeue-Medium.otf) format("opentype");
    font-weight: bold;
}

@font-face {
    font-family: "my-font-p";
    src:
        local("HelveticaNeue-Roman"), local("Helvetica Neue Roman"),
        url(fonts\HelveticaNeue-Roman.otf) format("opentype");
    font-weight: normal;
}

body {
    font-family: "my-font-p", sans-serif;
    background-color: #F6F6F4;
    color: #000000;
    font-size: 1em;
    line-height: 1.6em;
    overflow-x: hidden;
}

h1 a {
    font-family: "my-font-p", sans-serif;
    font-size: 1em;
    text-decoration: none;
    color: #FFFFFF;
}

h2 {
    font-size: 1.5625em;
    font-family: "my-font-h2-h3", sans-serif;
    text-align: center;
}

section h2 {
    margin-bottom: 0px;
    text-align: left;
}

h3 {
    font-size: 1.4em;
    font-family: "my-font-h2-h3", sans-serif;
    text-align: center;
}

section h3 {
    margin-bottom: 0px;
    text-align: left;
}

h4 {
    font-size: 1.3em;
    font-family: "my-font-h2-h3", sans-serif;
    text-align: left;
}

section h4 {
    margin-bottom: 0px;
}

p {
    padding: 5% 2% 5% 2%;
    max-width: 65ch;
    margin: 0;
}

ol.orderedlist-page {
    list-style: none;
    max-width: 65ch;
    font-family: "my-font-p", sans-serif;
    font-size: 1em;
    padding: 2%;
}

ol.orderedlist-page li {
    margin-bottom: 15px;
}

ul.unorderedlist-page {
    max-width: 65ch;
    font-family: "my-font-p", sans-serif;
    font-size: 1em;
    padding: 4%;
}

header {
    width: 100%;
    background-color: #3F3F3F;
    color: #FFFFFF;
    text-align: center;
    min-height: 64px;
    align-content: center;
}

.search-wrapper-header {
    display: none;
}

.vertical-center {
    padding: 0px !important;
}

/*Settings main*/
main {
    background-color: #D1CCC6;
    padding: 2% 0% 5% 0%;
    margin-bottom: 50px;
}

main section h2 h3 {
    text-align: left;
    margin-bottom: 0px !important;
}

main div {
    padding-left: 2%;
}

main a {
    color: #007095;
}

/*Setting section*/
section {
    background-color: rgba(255, 255, 255, 0.7);
    padding: 2%;
    display: grid;
    width: 100%;
    justify-content: center;
    padding-bottom: 50px;
    margin-bottom: 50px;
}

footer {
    background-color: #3F3F3F;
    color: #FFFFFF;
    padding: 2% 2% 2% 2%;
}

footer a {
    color: #FFFFFF;
}

footer .footer-container {
    display: flex;
    justify-content: space-between;
}

/*Main navigation*/
.wrapper-navigation {
    background-color: #FFFFFF;
}

.top-nav {
    display: flex;
    justify-content: space-between;
    padding: 2% 2% 2% 1%;
}

.main-nav {
    width: 100%;
    display: none;
    position: fixed;
    z-index: 1;
    background-color: #FFFFFF;
}

.main-nav ul {
    list-style: none;
    text-align: left;
    display: flex;
    flex-direction: column;
    padding-left: 0;
    margin-top: 0;
}

.main-nav li {
    border-bottom: 1px solid #000000;
}

.main-nav li a {
    width: 100%;
    height: 100%;
    color: #000000;
    text-align: left;
    padding: 14px 16px;
    text-decoration: none;
    float: left;
}

.main-nav .current-page {
    background-color: #3F3F3F;
    color: #FFFFFF;
}

/*Settings nav logon*/
.logon-main-nav {
    background-color: #69525E;
}

.logon-main-nav li {
    border-bottom: 1px solid white;
}

.logon-main-nav li a {
    color: white;
}

#icon-menu {
    font-size: 2em;
    align-self: center;
    color: #000000;
}

.user {
    align-self: center;
    background-color: #3F3F3F;
    padding: 10px;
}

.user a {
    color: #FFFFFF;
    text-decoration: none;
    width: 120px;
    height: 45px;
    font-size: 0.8em;
}

/*Search*/
.search-wrapper {
    padding-left: 5px;
}

.search-wrapper label {
    font-size: 0.8em;
    display: block;
}

.search-wrapper input {
    width: 80%;
    height: 45px;
    font-size: 1.4em;
}

#search-button {
    background-color: #0972C8;
    border: none;
    height: 45px;
    width: 45px;
}

#icon-search {
    color: #FFFFFF;
    font-size: 1.4em;
}

/*breadcrums*/
.container-breadcrums nav ol {
    display: flex;
    justify-content: flex-start;
    padding-left: 5px;
    list-style: none;
}

.container-breadcrums nav ol a {
    color: #007095;
}

.container-breadcrums nav ol a:visited {
    color: #8F3EBF;
}

.heading-hidden {
    visibility: hidden;
    width: 0px;
    height: 0px;
    margin: 0;
}

/*footer-navigation*/
footer ul {
    list-style: none;
    padding: 0px 5px 0px 5px;
    margin: 0;
    font-size: 0.8em;
}

.footer-links li a {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 10px;
}

.socialmedia-links {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.socialmedia-links span {
    font-size: 3em;
}

/*purple button styling*/
.purple-button {
    background-color: #69525E;
    color: white;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 30px 30px 15px 30px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1.2em;
    min-width: 300px;
}

.main-mypages div.vertical-center div {
    display: flex;
    justify-content: center;
    justify-self: center;
    width: 300px;
    height: 84px;
    margin-bottom: 30px;
}

/*blue button styling*/
.blue-button {
    background-color: #0972C8;
    color: white;
    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
    padding: 20px 30px 20px 30px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 1.2em;
    min-width: 250px;
}
/* ... */

